# graphrag_vs_rag

./: .dockerignore  .gitignore  Dockerfile  extract_text_from_PDFs.py  find_source.py  generate_visual_graph.py  global_search.ipynb  graphrag_config.py  graphrag_graph.html  graphrag_graph2.html  graphrag_graph3.html  graphrag_retrieval_path.html  graphrag_source_docs.py  hierarchy.py  inspect_lancedb.py  local_search.ipynb  main.py  pyproject.toml  query_graph.py  query_graph_cost.py  query_graph_without_cost.py  read_parquet_files.py  retrieval_graph.html  settings.yaml  visualize_graph.py  visualize_graph_2.py
RAG_pipeline/: chunk_documents.py  config.py  create_collections.py  prompt_gen.py  query_RAG.py  upload_batch_weaviate.py  weaviate_client.py
evaluation/: config.py  deepeval_eval.py  deepeval_test.ipynb  golden_dataset.csv  graphrag_numerical_run_dataset.csv  graphrag_numerical_run_dataset2.csv  graphrag_results.csv  graphrag_run_w_metadata.py  rag_numerical_run_dataset.csv  rag_numerical_run_dataset2.csv  rag_results.csv  rag_run_dataset.csv  rag_run_w_metadata.py  ragas_eval.py  ragas_graphrag_scores.csv  ragas_rag_scores.csv  run_eval.py  run_graphrag_eval.py  run_rag_eval.py  run_ragas.py  run_ragas_eval.py  utils.py
input/: 3-years-private-car-liability-policy.txt  compulsory-personal-accident-owner-driver-policy-wording.txt  goods-carrying-vehicle-liability-policy-wording.txt  personal-protect-policy_policy-wordings.txt  private-car-package-policy-wording.txt
output/: communities.parquet  community_reports.parquet  documents.parquet  stats.json  (+3 more)
(+84 files in other folders)
