[project]
name = "graphrag-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=17.20.0",
    "deepeval==4.0.7",
    "fastapi>=0.136.3",
    "graphrag>=3.1.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain==0.3.30",
    "langchain-community>=0.3,<0.4",
    "langchain-text-splitters>0.3,<0.4",
    "litellm>=1.86.2",
    "openai>=2.41.0",
    "pandas<3",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.3",
    "ragas>=0.3.1",
    "rich==13.9.4",
    "streamlit>=1.58.0",
    "weaviate>=0.1.2",
    "weaviate-client>=4.21.3",
]
